--- a/Linker/Base.lproj/Main.storyboard
+++ b/Linker/Base.lproj/Main.storyboard
@@ -1,24 +1,186 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Linker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="3hE-Wm-GOT">
+                                <rect key="frame" x="16" y="288.66666666666669" width="361" height="275.00000000000006"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lrB-OT-b65" customClass="AkiraTextField" customModule="TextFieldEffects">
+                                        <rect key="frame" x="4" y="0.0" width="353" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="dju-Cq-Emt"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" textContentType="username"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                                <color key="value" name="GrayPlaceholder"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" name="GrayPlaceholder"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gVt-vz-zTd" customClass="AkiraTextField" customModule="TextFieldEffects">
+                                        <rect key="frame" x="4" y="75" width="353" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="NLc-eJ-PL7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                                <color key="value" name="GrayPlaceholder"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" name="GrayPlaceholder"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dNJ-po-8NA">
+                                        <rect key="frame" x="4" y="150" width="353" height="50"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ucB-eD-4Vb" customClass="AkiraTextField" customModule="TextFieldEffects">
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" secureTextEntry="YES" textContentType="password"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                                        <color key="value" name="GrayPlaceholder"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                        <color key="value" name="GrayPlaceholder"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kFn-ef-2gH">
+                                                <rect key="frame" x="303" y="14.666666666666629" width="50" height="34.333333333333336"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <imageReference key="image" image="eye.slash.fill" catalog="system" symbolScale="medium"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="changePasswordVisability:" destination="BYZ-38-t0r" eventType="touchUpInside" id="weU-9F-Jk5"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="5UE-IA-8vy"/>
+                                            <constraint firstItem="ucB-eD-4Vb" firstAttribute="top" secondItem="dNJ-po-8NA" secondAttribute="top" id="8m5-jp-HUY"/>
+                                            <constraint firstItem="ucB-eD-4Vb" firstAttribute="leading" secondItem="dNJ-po-8NA" secondAttribute="leading" id="HXa-y9-na6"/>
+                                            <constraint firstAttribute="bottom" secondItem="ucB-eD-4Vb" secondAttribute="bottom" id="JtY-ms-m5J"/>
+                                            <constraint firstAttribute="trailing" secondItem="ucB-eD-4Vb" secondAttribute="trailing" id="KpR-E4-lpm"/>
+                                            <constraint firstItem="kFn-ef-2gH" firstAttribute="centerY" secondItem="dNJ-po-8NA" secondAttribute="centerY" constant="7" id="LkN-WC-HBt"/>
+                                            <constraint firstAttribute="trailing" secondItem="kFn-ef-2gH" secondAttribute="trailing" id="PyI-Bq-oWV"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kWf-wX-iJU">
+                                        <rect key="frame" x="105.66666666666669" y="229.99999999999994" width="150" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="S68-Qx-S8A"/>
+                                            <constraint firstAttribute="width" constant="150" id="tUK-Cq-Pa4"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Sign up"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="dNJ-po-8NA" firstAttribute="leading" secondItem="3hE-Wm-GOT" secondAttribute="leading" constant="4" id="3ZP-7t-6BJ"/>
+                                    <constraint firstItem="lrB-OT-b65" firstAttribute="leading" secondItem="3hE-Wm-GOT" secondAttribute="leading" constant="4" id="88Y-O5-6kR"/>
+                                    <constraint firstAttribute="trailing" secondItem="dNJ-po-8NA" secondAttribute="trailing" constant="4" id="LB8-NK-nyB"/>
+                                    <constraint firstItem="gVt-vz-zTd" firstAttribute="leading" secondItem="3hE-Wm-GOT" secondAttribute="leading" constant="4" id="WE6-a6-uPA"/>
+                                    <constraint firstAttribute="trailing" secondItem="lrB-OT-b65" secondAttribute="trailing" constant="4" id="c8M-12-gug"/>
+                                    <constraint firstAttribute="trailing" secondItem="gVt-vz-zTd" secondAttribute="trailing" constant="4" id="vYS-iL-QuA"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ep-FD-CwT">
+                                <rect key="frame" x="59.333333333333343" y="599.66666666666663" width="274.66666666666663" height="34.333333333333371"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already have an account? " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAu-b5-TXr">
+                                        <rect key="frame" x="0.0" y="0.0" width="199.33333333333334" height="34.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6B-ml-rgy">
+                                        <rect key="frame" x="199.33333333333334" y="0.0" width="75.333333333333343" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Sign in"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LinkerLogo" translatesAutoresizingMaskIntoConstraints="NO" id="XY0-JT-Zyr">
+                                <rect key="frame" x="32" y="90.999999999999986" width="329" height="165.66666666666663"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3hE-Wm-GOT" secondAttribute="trailing" constant="16" id="06m-HA-Ohx"/>
+                            <constraint firstItem="3hE-Wm-GOT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DDa-X2-oYd"/>
+                            <constraint firstItem="XY0-JT-Zyr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="Qqj-Oa-YhP"/>
+                            <constraint firstItem="8ep-FD-CwT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZSz-Rj-Mpy"/>
+                            <constraint firstItem="3hE-Wm-GOT" firstAttribute="top" secondItem="XY0-JT-Zyr" secondAttribute="bottom" constant="32" id="daM-MF-8Az"/>
+                            <constraint firstItem="XY0-JT-Zyr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="jcO-7X-OJI"/>
+                            <constraint firstItem="3hE-Wm-GOT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mHM-0e-k4C"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XY0-JT-Zyr" secondAttribute="trailing" constant="32" id="mYL-45-Flg"/>
+                            <constraint firstItem="3hE-Wm-GOT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="s32-Of-FE0"/>
+                            <constraint firstItem="8ep-FD-CwT" firstAttribute="top" secondItem="3hE-Wm-GOT" secondAttribute="bottom" constant="36" id="tYh-Gr-Dxs"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mailTF" destination="gVt-vz-zTd" id="5q7-nZ-3Y0"/>
+                        <outlet property="passwordTF" destination="ucB-eD-4Vb" id="A6y-Ek-hcr"/>
+                        <outlet property="usernameTF" destination="lrB-OT-b65" id="v92-gu-608"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="54.198473282442748" y="-34.507042253521128"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="gVt-vz-zTd">
+            <size key="intrinsicContentSize" width="48.333333333333336" height="22"/>
+        </designable>
+        <designable name="lrB-OT-b65">
+            <size key="intrinsicContentSize" width="78.333333333333329" height="22"/>
+        </designable>
+        <designable name="ucB-eD-4Vb">
+            <size key="intrinsicContentSize" width="73.333333333333329" height="21"/>
+        </designable>
+    </designables>
+    <resources>
+        <image name="LinkerLogo" width="375" height="375"/>
+        <image name="eye.slash.fill" catalog="system" width="128" height="85"/>
+        <namedColor name="GrayPlaceholder">
+            <color red="0.39215686274509803" green="0.40000000000000002" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
