--- a/Linker/Base.lproj/Main.storyboard
+++ b/Linker/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -241,6 +242,9 @@
                                         <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system" imagePlacement="trailing" title="Create" imagePadding="4">
                                             <color key="baseForegroundColor" red="0.18279297572968767" green="0.18409631446824248" blue="0.18800633068390693" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="didPressCreateNewRoom:" destination="sd0-W3-g3I" eventType="touchUpInside" id="q2T-Vq-e95"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -283,12 +287,90 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="newRoomNameTF" destination="ACv-B5-zNp" id="Co6-iZ-uGq"/>
                         <outlet property="roomTableView" destination="EhZ-2D-giT" id="3NZ-lN-gGJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Siz-ba-fgp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1797.709923664122" y="-33.098591549295776"/>
+        </scene>
+        <!--Chat Room View Controller-->
+        <scene sceneID="frM-3c-FdZ">
+            <objects>
+                <viewController storyboardIdentifier="chatRoomViewController" id="5oB-ux-P6V" customClass="ChatRoomViewController" customModule="Linker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uIn-2y-nBa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J9H-cR-3bA">
+                                <rect key="frame" x="0.0" y="768" width="393" height="50"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ktj-DP-WLL">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8TS-a1-LZO">
+                                                <rect key="frame" x="16" y="8" width="327" height="34"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="17"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="8TS-a1-LZO" firstAttribute="leading" secondItem="ktj-DP-WLL" secondAttribute="leading" constant="16" id="1gU-hZ-zy5"/>
+                                            <constraint firstItem="8TS-a1-LZO" firstAttribute="top" secondItem="ktj-DP-WLL" secondAttribute="top" constant="8" id="G7Y-IZ-oAx"/>
+                                            <constraint firstAttribute="bottom" secondItem="8TS-a1-LZO" secondAttribute="bottom" constant="8" id="dhE-Yn-VNm"/>
+                                            <constraint firstAttribute="trailing" secondItem="8TS-a1-LZO" secondAttribute="trailing" id="vkK-hD-Sgh"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" role="primary" translatesAutoresizingMaskIntoConstraints="NO" id="HU5-Ic-zaP">
+                                        <rect key="frame" x="343" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="YTk-zr-lat"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" buttonSize="large">
+                                            <imageReference key="image" image="arrow.right.circle.fill" catalog="system" symbolScale="large" renderingMode="hierarchical">
+                                                <hierarchicalColors>
+                                                    <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color red="0.63921568630000003" green="0.4549019608" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color red="0.63921568630000003" green="0.4549019608" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </hierarchicalColors>
+                                            </imageReference>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" scale="large"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="didPressSendMessage:" destination="5oB-ux-P6V" eventType="touchUpInside" id="1vl-U7-1yh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="grayf6"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="POu-81-7NQ"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5uh-gA-Fwu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5uh-gA-Fwu" firstAttribute="trailing" secondItem="J9H-cR-3bA" secondAttribute="trailing" id="LVr-Cc-Bp7"/>
+                            <constraint firstItem="J9H-cR-3bA" firstAttribute="leading" secondItem="5uh-gA-Fwu" secondAttribute="leading" id="ljf-jg-j4e"/>
+                            <constraint firstItem="5uh-gA-Fwu" firstAttribute="bottom" secondItem="J9H-cR-3bA" secondAttribute="bottom" id="zSa-ef-qaG"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="chatTF" destination="8TS-a1-LZO" id="QJN-Kv-gBL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aT8-Vq-wqw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2618" y="-35"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yqb-Bf-sDA">
@@ -299,7 +381,7 @@
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.63951212170000005" green="0.45560187099999999" blue="0.99859875440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="tintColor" red="0.63951212170000005" green="0.45560187099999999" blue="0.99859875440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -333,6 +415,7 @@
     </designables>
     <resources>
         <image name="LinkerLogo" width="375" height="375"/>
+        <image name="arrow.right.circle.fill" catalog="system" width="128" height="123"/>
         <image name="eye.slash.fill" catalog="system" width="128" height="85"/>
         <image name="plus.circle" catalog="system" width="128" height="123"/>
         <namedColor name="BlueBorder">
@@ -340,6 +423,9 @@
         </namedColor>
         <namedColor name="GrayPlaceholder">
             <color red="0.39215686274509803" green="0.40000000000000002" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grayf6">
+            <color red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
